Warp Revival WIP
- Moving DeclarationJob dependencies into testable classes and functions